# drink-water

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
cloudflare/migrations/: 0001_init.sql  0002_app_releases.sql  0003_sync.sql  0004_leaderboard_accounts.sql  0005_reconcile_split_accounts.sql  0006_settings_snapshots.sql  0007_reconcile_device_account_identity.sql  0008_app_configs.sql  0009_daily_activity_indexes.sql
cloudflare/src/: backup.ts  common.ts  config.ts  identity.ts  index.ts  leaderboard.ts  sync.ts  updates.ts  wechat.ts
docs/: cloudflare-update-check.md  sync-system.md
src/: App.tsx  api.ts  i18n.tsx  leaderboardApi.ts  styles.css  syncApi.ts  syncRetry.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  garden.rs  hydration.rs  lib.rs  main.rs  models.rs  shared.rs  tests.rs  ui.rs
src/components/: FirstRunOnboardingModal.tsx  HistoryPanel.tsx  InitialSeedGrantModal.tsx  LeaderboardPanel.tsx  PrimaryTabs.tsx  RestOverlay.tsx  SettingsPanel.tsx  StartupCatchUpModal.tsx  Toast.tsx  TodayPanel.tsx  WindowChrome.tsx
src/components/historyPanel/: GardenCollectionCard.tsx  GardenInventoryCard.tsx  GardenPlotDetailModal.tsx  HistoryHeatmapCard.tsx  (+5 more)
src/config/: backgroundRewards.json  backgroundRewards.ts  seedExchange.json  seedExchange.ts
src/hooks/: appControllerCircles.ts  appControllerConfig.ts  appControllerUiActions.ts  appControllerUtils.ts  useAppController.ts  useAppControllerEffects.ts
(+2 files in other folders)
