[package]
name = "drink-water"
version = "0.5.0"
description = "Hydration reminder desktop app with debt tracking"
authors = ["OpenAI Codex"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "drink_water_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tokio = { version = "1", features = ["time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
